# hex-game

./: .gitignore  CMakeLists.txt  TODO.md  compile.bash
inc/: action.hpp  board.hpp  colors.hpp  descriptions.hpp  game.hpp  graphs.hpp  hex.hpp  player.hpp  rng.hpp  tech.hpp  types.hpp  ui.hpp
src/: action.cpp  board.cpp  game.cpp  graphs.cpp  hex.cpp  main.cpp  rng.cpp  tech.cpp  ui.cpp
